styles/styles.css
/* PORTFOLIO */

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

/*end meyer reset*/

/*GOOGLE FONTS WERE HERE*/

/*font-family: 'IBM Plex Sans Condensed', sans-serif;
/*font-family: 'IBM Plex Serif', serif;
/*old red color #ff0000*/
/*white color #f2f2f2*/
/*hover color #FC5858*/
/*visited color #DE9898*/
/* new visited color color: #9D5454; */
/* old black body text #0E0B06 */
/* new grey body text #4f4f4f */
/* new white color #f9f8ff */
/* new blue over black #A192F9 */
/* 404 Error Green #006604 */

*:before,
*:after {
  box-sizing: border-box;
}

html {
  color: #0e0b06;
  font-size: 10px;
  font-family: "IBM Plex Sans Condensed", sans-serif;
  scroll-behavior: smooth;
}

/* ALL PAGES */

.container {
  /* 9.15.20 removed */
  /* background-color: white; */
  /* 9.15.20 added */
  background-color: #fbfbff;

  display: grid;
  margin: 0 auto;
  width: 100%;
}

.landing-container {
  display: grid;
  margin: 0 auto;
  width: 100%;
  background-color: #fbfbff;
}

header {
  display: flex;
  justify-content: space-between;
  margin: auto;
  padding: 2rem;
}

.head-background {
  /*	background-color: #d2e7ee;*/
  background-color: #0e0e0e;
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 100;
}

/* The progress container (grey background) */
.progress-container {
  width: 100%;
  height: 1rem;
  background: #ccc;
}

/* The progress bar (scroll indicator) */
.progress-bar {
  height: 8px;
  background: #4caf50;
  width: 0%;
}

.nav-logo {
  height: auto;
  max-width: 100%;
}

.nav-flex {
  align-items: center;
  display: grid;
  grid-gap: 3rem;
  font-size: 1.2rem;
  /* REMOVED 1FR 1FR 1FR WHEN TAKING CONTACT OUT */
  grid-template-columns: repeat(2, 1fr);
  text-transform: uppercase;
}

header li a {
  color: #f9f8ff;
  font-family: "IBM Plex Sans Condensed", sans-serif;
  text-decoration: none;
}

header li a:hover {
  color: #03dc0b;
  text-decoration: underline;
  text-decoration-style: double bold;
}

header li a:visited {
  /* color: #DE9898; */
  color: #a192f9;
}

li .nav-contact {
  color: #f9f8ff;
}

.to-top {
  text-align: center;
  /* color: #A192F9; */
  padding: 3rem;
}

.to-top a:hover {
  color: #03dc0b;
  text-decoration: underline;
}

.to-top a:link {
  color: #2400B4;
  text-decoration: none;
}

.hand-coding {
  padding: 0rem;
}

.hand-code {
  text-align: center;
  color: #4f4f4f;
  padding: 0rem;
}

/*MOBILE GENERAL TEXT*/

h1 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 4.4rem;
  font-weight: 300;
}

h2 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 3.2rem;
  font-weight: 300;
  text-transform: capitalize;
}

h3 {
  /* CHANGE TO SERIF Oct 2020 */
  /*	font-family: 'IBM Plex Serif', serif;*/
  font-family: 'IBM Plex Serif', serif;
  font-size: 2.6rem;
  text-transform: capitalize;
}

h4 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 1.8rem;
  font-weight: 700;
}

h5 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 1.6rem;
}

h6 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 1.4rem;
}

p {
  color: #4f4f4f;
  font-family: "IBM Plex Sans Condensed", sans-serif;
  /* font-family: 'IBM Plex Serif', serif; */
  font-size: 1.8rem;
  line-height: 1.5;
  margin: 0 auto;
  max-width: 80rem;
  text-align: left;
}

li {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 1.6rem;
  line-height: 1.4;
  padding-top: 1rem;
}

.external-site {
  font-family: "IBM Plex Serif", serif;
  font-size: 1.8rem;
  text-decoration: none;
}

/*IMAGES*/
img {
  height: auto;
  max-width: 100%;
}

/*UNIVERSAL PADDING*/

section {
  padding: 2rem;
}

/*BUTTONS*/

.button {
  /* background-color: #ff0000; */
  /* border-color: #ff0000; */
  background-color: #5fb4e7;
  border: solid;
  border-color: #5fb4e7;
  border-radius: 2rem;
  color: #0e0b06;
  font-size: 1.8rem;
  line-height: 2.6rem;
  margin-bottom: 2rem;
  margin-top: 2rem;
  outline: none;
  padding-top: 1rem;
  padding-bottom: 1rem;
  text-align: center;
  text-transform: capitalize;
  width: 26.6rem;
}

.button:hover {
  background-color: #c5e1f3;
  /* border-color: #ff0000; */
  /* color: #ff0000; */
  border-color: #c5e1f3;
  color: #0e0b06;
  outline: none;
}

.village-button-box {
  text-align: center;
}

/*FOOTER*/

footer {
  /* background-color: #0E0E0E; */
  background-color: #0e0e0e;
}

.contact-info {
  align-items: center;
  /*	background-color: #B30000;*/
  display: grid;
  grid-gap: 5rem;
  grid-template-columns: repeat(3, 1fr);
  padding: 3rem 0;
  text-align: center;
}

/* 404 error */

.error-grid {
  align-items: center;
  display: grid;
}
.error-header {
  color: #006604;
  padding: 3rem;
  text-align: center;
}
.obi-wan {
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding: 1rem;
}

.not-the-page {
  padding: 3rem 2rem;
}

.not-the-page a:visited {
  color: #a192f9;
  text-transform: uppercase;
}
/* ... */

